Visual feedback on extension icon if page not in archives

--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
       </tr>
   		<tr class="spaceUnder" align="center">
   			<td>
-          <button type="button" class="btn btn-success" id="save_now" tabindex='-1'>Save Page Now</button>
+          <button type="button" class="btn btn-success" id="save_now" tabindex='-1' style="width: 80%;">Save Page Now</button>
           <BR>
     		</td>
       </tr>
       <tr class="spaceUnder" align="center">
     		<td>
-          <button type="button" class="btn btn-primary" id="recent_capture" tabindex='-1'>Recent Version</button>
+          <button type="button" class="btn btn-primary" id="recent_capture" tabindex='-1' style="width: 80%;">Recent Version</button>
           <BR>
     		</td>
       </tr>
       <tr class="spaceUnder" align="center">
         <td>
-          <button type="button" class="btn btn-warning" id="first_capture" tabindex='-1'>First Version</button>
+          <button type="button" class="btn btn-warning" id="first_capture" tabindex='-1' style="width: 80%;">First Version</button>
+          <BR>
         </td>
     	</tr>
     </table>
